test/tests/stages/1_int_constants/invalid_parse/missing_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
